--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 <body>
   <div class="hero">
     <div class="overlay animate__animated animate__fadeInUp">
-      <h1 class="display-5">🎤 Ekin Cheng HERE & NOW 2025</h1>
+      <h1 class="display-5">Ekin Cheng HERE & NOW 2025</h1>
       <p class="lead">Toronto Concert Lucky Draw Registration</p>
     </div>
   </div>
@@ -75,7 +75,7 @@
   <div class="container mt-4">
     <!-- Disclaimer Section -->
     <div id="disclaimer" class="form-section visible animate__animated animate__fadeIn">
-      <h4>📜 Lucky Draw Disclaimer</h4>
+      <h4>Lucky Draw Disclaimer</h4>
       <div class="disclaimer-box">
         <p>By participating in this lucky draw, you agree to the following terms:</p>
         <ol>
@@ -97,12 +97,12 @@
 
     <!-- Draw Info + Form -->
     <div id="formSection" class="form-section animate__animated animate__fadeIn">
-      <h4>🎁 Lucky Draw Details</h4>
+      <h4>Lucky Draw Details</h4>
       <ul>
-        <li>📍 Venue: The Theatre at Great Canadian Toronto</li>
-        <li>📆 Date: June 28, 2025 at 8:00 PM</li>
-        <li>🎟 Prize: Limited edition concert poster with Ekin Cheng's signature</li>
-        <li>⏰ Entry Deadline: June 15, 2025</li>
+        <li>Venue: The Theatre at Great Canadian Toronto</li>
+        <li>Date: June 28, 2025 at 8:00 PM</li>
+        <li>Prize: Limited edition concert poster with Ekin Cheng's signature</li>
+        <li>Entry Deadline: June 15, 2025</li>
       </ul>
       <hr />
       <form id="drawForm">
@@ -128,7 +128,7 @@
 
     <!-- Thank You Message -->
     <div id="thankYou" class="form-section text-center animate__animated animate__fadeIn">
-      <h4>🎉 Thank You for Registering!</h4>
+      <h4>Thank You for Registering!</h4>
       <p>Your entry has been received. Please check your email for winner announcement updates.</p>
     </div>
   </div>
