change background image

--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
       background-repeat: no-repeat;
       animation: fadeIn 2s ease-out;
     }
+    @media (min-width: 768px) {
+      .hero {
+        background-image: url('images/posterd.png');
+      }
+    }
     .overlay {
       background-color: rgba(0, 0, 0, 0.6);
       padding: 40px;
