--- a/index.html
+++ b/index.html
@@ -49,7 +49,12 @@
       background: #ffc107;
       transform: scale(1.05);
     }
-    200px
+    .disclaimer-box {
+      background-color: #ffffff;
+      color: #000000;
+      padding: 15px;
+      border-radius: 8px;
+      max-height: 200px;
       overflow-y: scroll;
       font-size: 0.95rem;
       margin-bottom: 15px;
@@ -61,12 +66,8 @@
     @keyframes fadeIn {
       from {opacity: 0;}
       to {opacity: 1;}
-    }@media (min-width: 768px) {
-  .disclaimer-box {
-    max-height: 300px;
-  }
-}
-</style>
+    }
+  </style>
 </head>
 <body>
   <div class="hero">
