--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
   <title>Ekin Cheng Concert Lucky Draw</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" rel="stylesheet">
+
+  <!-- Firebase SDK -->
+  <script src="https://www.gstatic.com/firebasejs/10.12.1/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.12.1/firebase-firestore-compat.js"></script>
+
   <style>
     body {
       background: linear-gradient(to right, #1e1e2f, #2c3e50);
@@ -59,14 +64,6 @@
       font-size: 0.8rem;
       margin-bottom: 15px;
     }
-    @keyframes fadeInUp {
-      from {opacity: 0; transform: translateY(30px);}
-      to {opacity: 1; transform: translateY(0);}
-    }
-    @keyframes fadeIn {
-      from {opacity: 0;}
-      to {opacity: 1;}
-    }
   </style>
 </head>
 <body>
@@ -85,13 +82,12 @@
       <div class="disclaimer-box">
         <p>By participating in this lucky draw, you agree to the following terms:</p>
         <ol>
-          <li><strong>Purpose:</strong> This lucky draw is organized for promotional purposes in connection with the "Ekin Cheng – HERE & NOW 2025" Toronto concert.</li>
-          <li><strong>Eligibility:</strong> Participation is open to individuals residing in Canada who are 18 years or older. Only one entry per person is allowed.</li>
-          <li><strong>Prize:</strong> The winner will receive a limited edition concert poster with Ekin Cheng's signature. The prize has no cash value and cannot be exchanged or transferred.</li>
-          <li><strong>Use of Personal Information:</strong> Your submitted information (name, phone number, and email) will only be used for the purpose of this lucky draw and for notifying the winner. It will not be shared with third parties or used for any commercial purposes.</li>
-          <li><strong>Winner Notification:</strong> The winner will be selected at random and notified by email on June 18, 2025. If the winner does not respond within 48 hours, the prize will be forfeited and another winner will be selected.</li>
-          <li><strong>Organizer Rights:</strong> The organizer reserves the right to cancel or modify the draw at any time without prior notice, especially in the case of technical issues or fraudulent activity.</li>
-          <li><strong>Agreement:</strong> By checking the box below and submitting your information, you confirm that you have read, understood, and agreed to these terms.</li>
+          <li><strong>Purpose:</strong> Promotional for the "Ekin Cheng – HERE & NOW 2025" Toronto concert.</li>
+          <li><strong>Eligibility:</strong> Residents of Canada age 18+; one entry per person.</li>
+          <li><strong>Prize:</strong> Limited edition concert poster with Ekin Cheng's signature.</li>
+          <li><strong>Use of Info:</strong> Used only for the draw; not shared or sold.</li>
+          <li><strong>Winner:</strong> Contacted via email on June 18, 2025.</li>
+          <li><strong>Rights:</strong> Organizer may cancel/modify without notice.</li>
         </ol>
       </div>
       <div class="form-check">
@@ -107,7 +103,7 @@
       <ul>
         <li>Venue: The Theatre at Great Canadian Toronto</li>
         <li>Date: June 28, 2025 at 8:00 PM</li>
-        <li>Prize: Limited edition concert poster with Ekin Cheng's signature</li>
+        <li>Prize: Signed concert poster by Ekin Cheng</li>
         <li>Entry Deadline: June 15, 2025</li>
       </ul>
       <hr />
@@ -136,7 +132,7 @@
     <!-- Thank You Message -->
     <div id="thankYou" class="form-section text-center animate__animated animate__fadeIn">
       <h4>Thank You for Registering!</h4>
-      <p>Your entry has been received. Please check your email for winner announcement updates.</p>
+      <p>Your entry has been received. Good luck!</p>
     </div>
   </div>
 
@@ -155,49 +151,51 @@
     </div>
   </div>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script>
+  <!-- Firebase + Form Script -->
+  <script>
+    // Initialize Firebase
+    const firebaseConfig = {
+      apiKey: "AIzaSyB6-I9oj4hti5rsxN-dMZQdzeoXTsKX0Xg",
+      authDomain: "ldform.firebaseapp.com",
+      projectId: "ldform",
+      storageBucket: "ldform.firebasestorage.app",
+      messagingSenderId: "342526487179",
+      appId: "1:342526487179:web:bddee95d3bada6deac428e",
+      measurementId: "G-LESV793JQ0"
+    };
+    firebase.initializeApp(firebaseConfig);
+    const db = firebase.firestore();
+
     function showForm() {
-        if (document.getElementById('agreeCheck').checked) {
+      if (document.getElementById('agreeCheck').checked) {
         document.getElementById('disclaimer').classList.remove('visible');
         document.getElementById('formSection').classList.add('visible');
-        } else {
+      } else {
         alert('Please agree to the terms before continuing.');
-        }
+      }
     }
 
     document.getElementById('drawForm').addEventListener('submit', async function(e) {
-        e.preventDefault();
-
-        const data = {
+      e.preventDefault();
+      const data = {
         firstName: document.getElementById('firstName').value,
         lastName: document.getElementById('lastName').value,
         phone: document.getElementById('phone').value,
         email: document.getElementById('email').value,
         timestamp: new Date().toISOString()
-        };
+      };
 
-        try {
-        const response = await fetch('/.netlify/functions/send-email', {
-            method: 'POST',
-            headers: {
-            'Content-Type': 'application/json'
-            },
-            body: JSON.stringify(data)
-        });
-
-        if (response.ok) {
-            document.getElementById('formSection').classList.remove('visible');
-            document.getElementById('thankYou').classList.add('visible');
-        } else {
-            alert('Something went wrong. Please try again.');
-        }
-        } catch (error) {
-        console.error('Error:', error);
-        alert('Submission failed. Please try again later.');
-        }
+      try {
+        await db.collection("registrations").add(data);
+        document.getElementById('formSection').classList.remove('visible');
+        document.getElementById('thankYou').classList.add('visible');
+      } catch (err) {
+        console.error("Error saving to Firestore:", err);
+        alert("Failed to submit. Please try again.");
+      }
     });
-    </script>
+  </script>
 
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
