--- a/index.html
+++ b/index.html
@@ -109,15 +109,17 @@
       <hr />
 
       <form id="drawForm">
-        <div class="mb-3">
-          <label class="form-label">Last Name</label>
-          <input type="text" class="form-control" id="lastName" required>
+        <div class="row">
+            <div class="mb-3 col-md-6">
+            <label class="form-label">First Name</label>
+            <input type="text" class="form-control" id="firstName" required>
+            </div>
+            <div class="mb-3 col-md-6">
+            <label class="form-label">Last Name</label>
+            <input type="text" class="form-control" id="lastName" required>
+            </div>
         </div>
-        <div class="mb-3">
-          <label class="form-label">First Name</label>
-          <input type="text" class="form-control" id="firstName" required>
-        </div>
-        <div class="mb-3">
+        <div class="mb-3" style="max-width: 300px;">
           <label class="form-label">Phone Number</label>
           <input type="tel" class="form-control" id="phone" required>
         </div>
